--- a/NAudioPlayer/Base.lproj/Main.storyboard
+++ b/NAudioPlayer/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -47,9 +47,21 @@
                                     <action selector="handleProgressSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="PeD-wi-odo"/>
                                 </connections>
                             </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m8m-TA-ivR">
+                                <rect key="frame" x="30" y="524" width="354" height="60"/>
+                                <color key="backgroundColor" systemColor="systemPurpleColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="iOQ-i5-hNV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="m8m-TA-ivR" secondAttribute="trailing" constant="30" id="7vi-Zk-HjT"/>
+                            <constraint firstItem="m8m-TA-ivR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="94f-pI-kio"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UnW-h0-FVa" secondAttribute="trailing" constant="60" id="Feh-e9-GaZ"/>
                             <constraint firstItem="UnW-h0-FVa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="150" id="MUf-9k-VaO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6pj-p2-fnL" secondAttribute="trailing" constant="60" id="XBj-ZU-FmJ"/>
@@ -59,11 +71,13 @@
                             <constraint firstItem="6pj-p2-fnL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="s3d-Is-maE"/>
                             <constraint firstItem="UnW-h0-FVa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="uL7-Mg-iAd"/>
                             <constraint firstItem="1iO-uF-DsL" firstAttribute="top" secondItem="6pj-p2-fnL" secondAttribute="bottom" constant="60" id="x6S-IN-i2h"/>
+                            <constraint firstItem="m8m-TA-ivR" firstAttribute="top" secondItem="1iO-uF-DsL" secondAttribute="bottom" constant="60" id="y4q-xo-jD6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="playBtn" destination="UnW-h0-FVa" id="zGz-B7-bng"/>
+                        <outlet property="positionLabel" destination="m8m-TA-ivR" id="wsA-g8-KsG"/>
                         <outlet property="progressSlider" destination="1iO-uF-DsL" id="e9h-Am-3FS"/>
                         <outlet property="stopBtn" destination="6pj-p2-fnL" id="N5f-8f-nnW"/>
                     </connections>
